--- a/index.html
+++ b/index.html
@@ -6,10 +6,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Draw Objects 3D</title>
     <link rel="stylesheet" href="./src/css/Style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
     <script src="./src/libs/build/three.js"></script>
+    <script src="./src/libs/controls/OrbitControls.js"></script>
     <script src="./src/js/main.js"></script>
 </head>
 <body onload="start()">
-    <canvas width="800" height="600" class="webgl"></canvas>
+    <canvas class="webgl"></canvas>
+    <nav class="navbar bg-light">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="./src/img/iconave.png" alt="Nave" width="30">
+            </a>
+
+            <ul class="nav justify-content-end">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Create Objects</a>
+                    <ul class="dropdown-menu" >
+                        <li><button id ="objects2Create" class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal" value="Box">Box</button></li>
+                        <li><button id ="objects2Create" class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal" value="Cylinder">Cylinder</button></li>
+                        <li><button id ="objects2Create"class="dropdown-item" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal" value="Sphere">Sphere</button></li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Create a box</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <label for="form-control ancho" class="form-label">Ancho</label>
+                <input class="form-control ancho" type="number" name="" id="Ancho" placeholder="x (Ancho)" title="Ancho">
+                <label for="form-control alto" class="form-label">Ancho</label>
+                <input class="form-control alto" type="number" name="" id="Alto" placeholder="y (Alto)" title="Alto">
+                <label for="form-control profundidad" class="form-label">Ancho</label>
+                <input class="form-control profundidad" type="number" name="" id="Profundidad" placeholder="z (Profundidad)" title="Profundidad">
+                <label for="exampleColorInput" class="form-label">Color picker</label>
+                <input type="color" class="form-control form-control-color" id="Color" value="#563d7c" title="Choose your color">
+            </div>
+            <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button onclick ="getValues({object2create})" type="button" class="btn btn-primary" data-bs-dismiss="modal">Create</button>
+            </div>
+        </div>
+        </div>
+    </div>
 </body>
 </html>
